Fixed .no-scrollbar

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -57,7 +57,7 @@ a:hover {
     transition: all 0.2s ease-in-out;
 }
 
-no-scrollbar {
+.no-scrollbar {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */  
     &::-webkit-scrollbar {
@@ -65,6 +65,14 @@ no-scrollbar {
     }
 }
   
+// .loading-logo {
+//     animation: deblur 1s;
+// }
+
+// @keyframes deblur {
+//    0% {filter: blur(40px) ;} 
+//    100% {filter: blur(0px) ;} 
+// }
 
 .image-bg {
     z-index: -1;
